# robot_descriptions_cpp

./: .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
assets/: ANYmal.toml  kinova.toml  solo.toml
src/: CMakeLists.txt
src/robot_descriptions_cpp/: load_spec.cpp  load_spec.hpp  robot_load.cpp  robot_load.hpp  robot_spec.cpp  robot_spec.hpp
tests/: CMakeLists.txt  test_loader.cpp
